while/tests/invalid-parsing/Parsing_Invalid_24.while
int f(int x) {
    if(x >= 0) {
      int y = x + 1;
    } else {
      int y = 0;
    }
    return y;
}
